--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,8 +1,67 @@
-.topBar{
-  background-color: #007ea5;
+@import "../../global";
+
+.topBar {
+  background-color: white;
   width: 100%;
   height: 70px;
   position: fixed;
   top: 0;
   z-index: 2;
+
+  .wrapper {
+    padding: 10px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .left {
+      display: flex;
+      align-items: center;
+
+      .logo {
+        font-size: 40px;
+        font-weight: 700;
+        text-decoration: none;
+        color: inherit;
+        margin-right: 40px;
+      }
+
+      .itemContainer {
+        display: flex;
+        align-items: center;
+        margin-left: 30px;
+
+        .icon {
+          font-size: 18px;
+          margin-right: 5px;
+          //color: lightsalmon;
+        }
+
+        .span{
+          font-size: 15px;
+          font-weight: 500;
+        }
+      }
+    }
+
+    .right{
+      //background-color: red;
+
+      .hamburger{
+        width: 32px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+
+        span{
+          width: 100%;
+          height: 3px;
+          background-color: $mainColor;
+          margin-top: 2px;
+        }
+      }
+    }
+  }
 }
