--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -7,6 +7,7 @@
   position: fixed;
   top: 0;
   z-index: 2;
+  transition: all 2s ease;
 
   .wrapper {
     padding: 10px 30px;
@@ -45,21 +46,66 @@
     }
 
     .right{
-      //background-color: red;
 
       .hamburger{
+        position: relative;
         width: 32px;
         height: 25px;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         cursor: pointer;
 
         span{
           width: 100%;
           height: 3px;
+          border-radius: 5px;
           background-color: $mainColor;
-          margin-top: 2px;
+          position: absolute;
+          transition: all 0.5s ease-in-out;
+          &:first-child {
+            top: 0;
+          }
+          &:nth-child(2),&:nth-child(3) {
+            top: 11px;
+          }
+          &:last-child {
+            top: 22px;
+          }
+        }
+      }
+    }
+  }
+}
+
+.active{
+  background-color: $mainColor;
+  color: white;
+
+  .right {
+    .hamburger {
+
+      span {
+        &:first-child {
+          width: 0;
+        }
+
+      &:nth-child(2) {
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+        background-color: white;
+      }
+        &:nth-child(3) {
+          -webkit-transform: rotate(-45deg);
+          -moz-transform: rotate(-45deg);
+          -o-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+          background-color: white;
+        }
+
+        &:last-child {
+          width: 0;
         }
       }
     }
