feat: hide menu bar when click sub menu item

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -21,13 +21,17 @@
     font-size: 30px;
     font-weight: 300;
     color: white;
+    width: 60%;
 
     li{
-
+      margin-bottom: 25px;
       a{
         color:inherit;
         font-size: inherit;
         text-decoration: none;
+      }
+      &:hover{
+        font-weight: 500;
       }
     }
   }
