--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,12 @@
 .intro{
-  background-color: #00f3ad;
+  background-color: #ffffff;
+  display: flex;
+
+  .left{
+    flex:0.5;
+  }
+
+  .right{
+    flex:0.5;
+  }
 }
