--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -4,9 +4,61 @@
 
   .left{
     flex:0.5;
+    overflow: hidden;
+
+    .imgContainer{
+      overflow: hidden;
+      width: 700px;
+      height: 700px;
+      background-color: crimson;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+
+      img{
+        height: 100%;
+      }
+    }
   }
 
   .right{
     flex:0.5;
+    position: relative;
+
+    .wrapper{
+      width: 100%;
+      height: 100%;
+      padding-left: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+
+      h1{
+        font-size: 60px;
+        margin: 10px 0;
+
+      }
+      h2{
+        font-size: 35px;
+      }
+
+      h3{
+        font-size: 30px;
+      }
+
+
+    }
+
+    a{
+      position: absolute;
+      bottom: 10px;
+      left: 40%;
+
+      img{
+        width: 30px;
+      }
+    }
   }
 }
