--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -10,14 +10,15 @@
       overflow: hidden;
       width: 700px;
       height: 700px;
-      background-color: crimson;
+      background-color: #ff4d17;
+      //background-color: crimson;
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: flex-end;
 
       img{
-        height: 100%;
+        height: 98%;
       }
     }
   }
@@ -49,7 +50,7 @@
 
         span{
           font-size: inherit;
-          color: crimson;
+          color: #ff4d17;
         }
 
         .ityped-cursor {
