--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,13 +1,14 @@
 @import "../../global";
 
 .topBar {
-  background-color: white;
+  background-color: #000000;
   width: 100%;
   height: 70px;
   position: fixed;
   top: 0;
   z-index: 3;
   transition: all 1s ease;
+  color: white;
 
   .wrapper {
     padding: 10px 30px;
