--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,62 @@
+@import "../../global";
+
 .portfolio{
-  background-color: lightskyblue;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1{
+    font-size: 50px;
+  }
+
+  ul{
+    margin: 10px;
+    padding: 0;
+    list-style: none;
+    display: flex;
+
+  }
+
+  .container{
+      width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+    .item {
+      width: 220px;
+      height: 150px;
+      border-radius: 20px;
+      border: 1px solid #e7e7e7;
+      margin: 10px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      position: relative;
+      cursor: pointer;
+      transition: all 0.5s ease;
+
+      h3{
+        position: absolute;
+        font-size: 20px;
+        text-align: center;
+      }
+      img {
+        width: inherit;
+        height: inherit;
+        object-fit: cover;
+        z-index: 1;
+      }
+      &:hover{
+        background-color: $mainColor;
+        img{
+          opacity: 0.1;
+          z-index: 0;
+        }
+      }
+    }
+  }
 }
