--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,13 @@
 @import "../../global";
+
 .intro{
   background-color: #000000;
   display: flex;
+
+  @include mobile{
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left{
     flex:0.5;
@@ -17,8 +23,17 @@
       justify-content: center;
       align-items: flex-end;
 
+      @include mobile{
+        align-items: flex-start;
+        //width: auto;
+      }
+
       img{
         height: 98%;
+
+        @include mobile{
+          height: 50%;
+        }
       }
     }
   }
@@ -35,20 +50,35 @@
       flex-direction: column;
       justify-content: center;
 
-
+      @include mobile{
+        padding-left: 0;
+        align-items: center;
+      }
       h1{
         font-size: 60px;
         margin: 10px 0;
         color: white;
+
+        @include mobile{
+          font-size: 40px;
+        }
       }
       h2{
         font-size: 35px;
         color: white;
+
+        @include mobile{
+          font-size: 25px;
+        }
       }
 
       h3{
         font-size: 30px;
         color: white;
+
+        @include mobile{
+          font-size: 20px;
+        }
 
         span{
           font-size: inherit;
