--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -14,6 +14,11 @@
   align-items: center;
   transition: all 1s ease;
 
+  @include mobile{
+    width: 200px;
+    right: -200px;
+  }
+
   ul{
     margin: 0;
     padding:0;
@@ -22,6 +27,10 @@
     font-weight: 300;
     color: white;
     width: 60%;
+
+    @include mobile{
+      font-size: 25px;
+    }
 
     li{
       margin-bottom: 25px;
