--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -8,6 +8,10 @@
 
   h1{
     font-size: 50px;
+
+    @include mobile{
+      font-size: 30px;
+    }
   }
 
   ul{
@@ -16,14 +20,25 @@
     list-style: none;
     display: flex;
 
+    @include mobile{
+      margin: 10px 0;
+      flex-wrap: wrap;
+      justify-content: center;
+      //padding: 15px;
+      //align-content: center;
+    }
   }
 
   .container{
-      width: 70%;
+    width: 70%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+
+    @include mobile{
+      width: 100%;
+    }
 
     .item {
       width: 220px;
@@ -38,6 +53,18 @@
       position: relative;
       cursor: pointer;
       transition: all 0.5s ease;
+
+      @include mobile{
+        width:120px;
+        height: 100px;
+
+      }
+
+      @include mobileSE{
+        width:100px;
+        height: 80px;
+
+      }
 
       h3{
         position: absolute;
