--- a/src/components/portfolio/portfolioList.scss
+++ b/src/components/portfolio/portfolioList.scss
@@ -7,6 +7,10 @@
   border-radius: 6px;
   cursor: pointer;
 
+  @include mobile{
+    margin-right: 10px;
+  }
+
   &:active{
     background-color: $mainColor;
 
