--- a/src/global.scss
+++ b/src/global.scss
@@ -2,9 +2,16 @@
 $mainColor: #AA1945;
 
 $width: 768px;
+$widthSE: 320px;
 
 @mixin mobile {
   @media (max-width: #{$width} ) {
+    @content
+  }
+}
+
+@mixin mobileSE {
+  @media (max-width: #{$widthSE} ) {
     @content
   }
 }
