--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,3 +1,69 @@
+@import "../../global";
+
 .contact{
-  background-color: lightblue;
+  background-color: white;
+  display: flex;
+
+  .left{
+    flex:1;
+    overflow: hidden;
+
+    img{
+      height: 100%;
+
+    }
+
+  }
+
+  .right{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h2{
+      font-size: 30px;
+    }
+
+    form{
+      width: 70%;
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+
+      input{
+        width: 300px;
+        height: 30px;
+        font-size: 14px;
+        //border-radius: 5px;
+        //border: none;
+      }
+
+      textarea{
+        width: 300px;
+        height: 150px;
+        font-size: 14px;
+        //border-radius: 5px;
+        //border: none;
+      }
+
+      button{
+        width: 300px;
+        height: 30px;
+        color: white;
+        background-color: $mainColor;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-weight: 500;
+
+        &:focus{
+          outline: none;
+        }
+      }
+    }
+  }
 }
