--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -4,6 +4,10 @@
   background-color: white;
   display: flex;
 
+  @include mobile{
+    flex-direction: column;
+  }
+
   .left{
     flex:1;
     overflow: hidden;
@@ -24,44 +28,36 @@
 
     h2{
       font-size: 30px;
+      color:crimson;
+      text-transform: uppercase;
     }
 
-    form{
+    .contactList{
       width: 70%;
       height: 50%;
       display: flex;
       flex-direction: column;
+      justify-content: space-around;
       align-items: center;
-      justify-content: space-evenly;
 
-      input{
-        width: 300px;
-        height: 30px;
-        font-size: 14px;
-        //border-radius: 5px;
-        //border: none;
+      @include mobile{
+        width: 90%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
       }
 
-      textarea{
-        width: 300px;
-        height: 150px;
-        font-size: 14px;
-        //border-radius: 5px;
-        //border: none;
-      }
+      a{
+        width: 45%;
+        display: flex;
+        justify-content: center;
 
-      button{
-        width: 300px;
-        height: 30px;
-        color: white;
-        background-color: $mainColor;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-weight: 500;
+        @include mobile{
+          justify-content: space-evenly;
+        }
 
-        &:focus{
-          outline: none;
+        svg{
+          margin-right: 5px;
         }
       }
     }
