style: update contact form

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -14,7 +14,6 @@
 
     img{
       height: 100%;
-
     }
 
   }
@@ -25,6 +24,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #000000;
 
     h2{
       font-size: 30px;
