--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,10 +1,22 @@
+@import "../../global";
+
 .about{
   background-color: white;
   display: flex;
   overflow: hidden;
 
+  @include mobile{
+    flex-direction: column;
+  }
+
   .icon{
     font-size: 40px;
+
+    @include mobile{
+      font-size: 20px;
+      margin-top: 5px;
+      //display: none;
+    }
   }
   .left{
     flex: 1;
@@ -31,6 +43,11 @@
     h3{
       color: black;
       font-size: 35px;
+
+      @include mobile{
+        font-size: 20px;
+      }
+
     }
     p{
       margin-top: 20px;
@@ -39,6 +56,11 @@
       font-weight: 300;
       font-size: 17px;
       line-height: 1.6;
+
+      @include mobile{
+        font-size: 13px;
+        line-height: 1.5;
+      }
     }
   }
 
@@ -51,9 +73,18 @@
     //background-color: #e6dcdc;
     background-color: #fdefec;
 
+    @include mobile{
+      flex: 0.8;
+    }
+
     h3{
       color: black;
       font-size: 35px;
+
+      @include mobile{
+        font-size: 20px;
+      }
+
     }
 
     .university{
@@ -64,6 +95,17 @@
       align-items: center;
       text-align: center;
 
+      h4{
+        @include mobile{
+          font-size: 14px;
+        }
+      }
+
+      p{
+        @include mobile{
+          font-size: 12px;
+        }
+      }
       span{
         color: #5c5b5b;
       }
@@ -87,6 +129,10 @@
     h3{
       color: black;
       font-size: 35px;
+
+      @include mobile{
+        font-size: 20px;
+      }
     }
 
     .fav{
@@ -101,6 +147,10 @@
       li{
         font-size: 17px;
         font-weight: 300;
+
+        @include mobile{
+          font-size: 14px;
+        }
 
       }
     }
