--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -106,6 +106,19 @@
         }
       }
 
+      .hireMeBtn{
+        position: static;
+        margin-top: 10px;
+        width: 30%;
+        z-index: 2;
+        font-size: 18px;
+
+        @include mobile{
+          font-size: 16px;
+          width: 50%;
+        }
+      }
+
 
     }
 
