--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,7 @@
 @import "../../global";
 
 .intro{
-  background-color: #000000;
+  background-color: #050e17;
   display: flex;
 
   @include mobile{
