--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,8 @@
 //$mainColor: #007ea5;
 $mainColor: #AA1945;
+$mainBgColorOne: #050e17;
+$mainBgColorTwo: #101820FF;
+$mainTxtColor: #F2AA4CFF;
 
 $width: 768px;
 $widthSE: 320px;
