--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -3,7 +3,7 @@
 .menu{
   width: 300px;
   height: 100vh;
-  background-color: $mainColor;
+  background-color: #020a13;
   position: fixed;
   top: 0;
   right: -300px;
@@ -25,7 +25,7 @@
     list-style: none;
     font-size: 30px;
     font-weight: 300;
-    color: white;
+    //color: white;
     width: 60%;
 
     @include mobile{
@@ -35,13 +35,18 @@
     li{
       margin-bottom: 25px;
       a{
-        color:inherit;
+        //color: #354e67;
+        color: $mainTxtColor;
         font-size: inherit;
         text-decoration: none;
+
+        &:hover{
+          //font-weight: 500;
+          color: #FD1D1D !important;
+          transition: all 0.3s ease-in-out;
+        }
       }
-      &:hover{
-        font-weight: 500;
-      }
+
     }
   }
 }
