refac: data update in projects

--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -59,6 +59,7 @@
         text-align: left;
         font-weight: 300;
         margin-bottom: 20px;
+        flex: 1;
 
         @include mobile{
           font-size: 8px;
