--- a/src/global.scss
+++ b/src/global.scss
@@ -3,6 +3,7 @@ $mainColor: #AA1945;
 $mainBgColorOne: #050e17;
 $mainBgColorTwo: #101820FF;
 $mainTxtColor: #F2AA4CFF;
+$mainTxtColorLight: #e59e61;
 
 $width: 768px;
 $widthSE: 320px;
