--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -61,30 +61,23 @@
         align-items: center;
       }
       h1{
-        font-size: 60px;
+        font-size: clamp(35px,5vw,60px);
         margin: 5px 0;
         color: white;
-
-        @include mobile{
-          font-size: 35px;
-        }
       }
       h2{
-        font-size: 35px;
+        font-size: clamp(22px,3vw,35px);
         color: white;
 
-        @include mobile{
-          font-size: 22px;
-        }
       }
 
       h3{
-        font-size: 30px;
+        font-size: clamp(18px,3vw,30px);
         color: white;
 
-        @include mobile{
-          font-size: 18px;
-        }
+        //@include mobile{
+        //  font-size: 18px;
+        //}
 
         span{
           font-size: inherit;
